# mdart

./: .gitignore  CMakeLists.txt  Justin.txt  JustinNEWNEWNEWCURRENTUSETHISONE.txt  README.md  Test_Doc1  imu_data.msg  package.xml
.metadata/.plugins/org.eclipse.core.resources/.root/: 3.tree
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
M-DART_vision/: CMakeLists.txt  package.xml
M-DART_vision/msg/: CamPath.msg  RedGreenCircle.msg  WhiteLine.msg
Non_ROS_Code/Teensy/Teensy3.6_10/: .cproject  .project
Non_ROS_Code/Teensy/Teensy3.6_10/board/: board.h  (+4 more)
Non_ROS_Code/VESC/bldc-master_2/: .cproject  .project  comm_can.c  conf_general.h  datatypes.h
RosNodeTemplate/: CMakeLists.txt  package.xml
RosNodeTemplate/msg/: TemplateMSG.msg
RosNodeTemplate/src/: TemplateNode.cpp
launch/: arbitrator.launch  drivediagnostics.launch  drivedignostics.launch  vehicledynamics.launch
messages/: crisMessageFile.txt
msg/: GPSPath.msg  GPS_data.msg  LIDARPath.msg  Line_Detection.msg  Path.msg  Sanity.msg  WaypointsList.msg  WheelVals.msg  WinCon.msg  obstacles.msg
src/: AVC_path_planner.cpp  Figure_8_Path_Generator_node.cpp  GPS_node.cpp  Hokuyo_node.cpp  IGVC_path_planning_node.cpp  arbitrator_node.cpp  getIMU.ino  gps_waypoints.cpp  serial_gateway.cpp  turn_radius.cpp  vehicle_dynamics.cpp
src/Camera Nodes/: Line_Detection_node.cpp
test/: AVC_path_planner_test.cpp
turn_radius/: CMakeLists.txt  package.xml
turn_radius/msg/: turn.msg
turn_radius/src/: turn_radius.cpp
(+133 files in other folders)
